[package]

name          = "bytes"
version       = "0.4.8" # don't forget to update html_root_url
license       = "MIT/Apache-2.0"
authors       = ["Carl Lerche <me@carllerche.com>"]
description   = "Types and traits for working with bytes"
documentation = "https://carllerche.github.io/bytes/bytes"
homepage      = "https://github.com/carllerche/bytes"
repository    = "https://github.com/carllerche/bytes"
readme        = "README.md"
keywords      = ["buffers", "zero-copy", "io"]
exclude       = [
    ".gitignore",
    ".travis.yml",
    "deploy.sh",
    "bench/**/*",
    "test/**/*"
]
categories = ["network-programming", "data-structures"]

[dependencies]
byteorder = "1.0.0"
iovec = "0.1.2"
serde = { version = "1.0", optional = true }

[dev-dependencies]
serde_test = "1.0"

[replace]
"iovec:0.1.2" = { git = "https://github.com/ThinkAlexandria/iovec.git", branch = "bytes_0.5.0_compat" }
